5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1601_2425.log
== TEST (2019-03-25 19:18:03) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 "km/l")
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 "km/l")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:18:23) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 "km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 "km/l"))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:18:31) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 km/l))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 km/l))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:19:02) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3, km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo_medio,3, km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:19:32) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 km/l))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 km/l))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:19:48) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 (km/l)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo_medio,3 (km/l)))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:29) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3,"km/l")
-- ERROR:
File "XXXX", line 7
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:52) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3,"km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(consumo_medio,3,"km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:12) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:23) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3))
-- EXECUTION TIME:
0.147065
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:21) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 km/l))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 km/l))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:47) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3km/l))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3km/l))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:58) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 km/l))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 km/l))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:14) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3 "km/l"))
-- ERROR:
File "XXXX", line 6
    print(round(consumo_medio,3 "km/l"))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:22) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:46) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print(round(consumo_medio,3))
-- EXECUTION TIME:
0.274244
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:27:09) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( round(consumo_medio,3) + "km/l" )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print( round(consumo_medio,3) + "km/l" )
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:02) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + "km/l" )
-- OUTPUT:
14.286km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:16) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + "km/l" )
-- EXECUTION TIME:
0.186122
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:36) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + " km/l" )
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:44) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + " km/l" )
-- EXECUTION TIME:
0.156641
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:32:12) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + " km/l" )
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:12:14) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + " km/l" )
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:12:31) 
-- CODE:
a = float(input("distancia percorrida : "))
b = float(input("combustivel gasto: "))

consumo_medio = a/b

print( str(round(consumo_medio,3)) + " km/l" )
-- EXECUTION TIME:
0.173827
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
